# RailTracking

./: CMakeLists.txt  README.md  RailTracking.cc  ellipse_demo.cc  hypotheses.txt
include/: camera.hpp  rail.hpp
misc/: TieDirection.py
src/: camera.cc  rail.cc
test/: cereseigen.cc  ellispse.cc  tests.cc
